--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.37.3",
+    "convex": "^1.31.7",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
